# CityGame3D

./: CMakeLists.txt
libs/glfw/docs/html/: jquery.js
libs/glfw/include/glfw/: glfw3.h
src/: App.cpp  App.h  main.cpp
src/window/: app_window.cpp  app_window.h
